fixed db and workers
